# nvim-python-docstrings

./: README.md
plugin/: pydocstring.lua
queries/pydocstring/: injections.scm
queries/python/: injections.scm
tree-sitter-pydocstring/: .editorconfig  .gitignore  Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py
tree-sitter-pydocstring/bindings/c/: tree-sitter-pydocstring.h  tree-sitter-pydocstring.pc.in
tree-sitter-pydocstring/bindings/go/: binding.go  binding_test.go  go.mod
tree-sitter-pydocstring/bindings/node/: binding.cc
tree-sitter-pydocstring/bindings/python/tree_sitter_pydocstring/: __init__.py  binding.c
tree-sitter-pydocstring/bindings/rust/: build.rs  lib.rs
tree-sitter-pydocstring/src/: grammar.json  node-types.json  parser.c  scanner.c
tree-sitter-pydocstring/test/corpus/: docstrings.txt  empty.txt
